# BankOps-AI-Assistant

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/tests/: conftest.py  test_agent_graph.py  test_contextualization_service.py  test_document_service.py  test_embeddings.py  test_health.py  test_llm_service.py  test_local_hybrid_retrieval.py  test_memory_store.py  test_pinecone_hybrid_retrieval.py  test_pinecone_ingestion.py  test_rate_limiter.py  test_tools.py
docs/: architecture.md  assumptions.md  demo_script.md  observability.md
frontend/: streamlit_app.py
sample_docs/architecture/: ai-assistant-rag-architecture.md  card-processing-reference.md  real-time-payments-platform.md
sample_docs/incidents/: ach-settlement-delay-2025-03-21.md  card-authorization-latency-2025-02-03.md  mobile-bill-pay-degradation-2025-04-09.md  payment-gateway-timeout-2025-01-14.md
sample_docs/meetings/: ai-governance-working-group-2025-03-27.md  card-platform-roadmap-2025-02-20.md  payments-incident-review-2025-01-16.md
sample_docs/policies/: ai-assistant-security-policy.md  cardholder-data-handling-policy.md  payment-data-retention-policy.md
sample_docs/products/: ai-operations-copilot-spec.md  commercial-card-controls-spec.md  instant-payments-product-spec.md
sample_docs/runbooks/: card-auth-service-restart.md  card-network-failover.md  fraud-scoring-degraded-mode.md  payment-queue-backlog.md
scripts/: ingest_documents.py  seed_mock_docs.py  upsert_pinecone.py
(+33 files in other folders)
