[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lead-assistant"
version = "0.1.0"
description = "Enterprise AI assistant assignment scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "streamlit>=1.37.0",
    "requests>=2.32.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langsmith>=0.1.0",
    "pinecone>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
